# vestoria-data-terminal

./: .gitignore  README.md  code-review.md  pyproject.toml
backend/: .env.example  data_manager.py  init_indicators.py  pyproject.toml  test_api.py  test_phase2.py
backend/app/: cli.py  main.py
backend/app/api/v1/: __init__.py  assets.py  indicators.py  prices.py  update.py
backend/app/core/: config.py  database.py
backend/app/fetchers/: __init__.py  base.py  fear_greed_fetcher.py  registry.py  yfinance_fetcher.py
backend/app/indicators/: __init__.py  base.py  btc_fear_greed.py  ma200.py  registry.py  vix.py
backend/app/models/: __init__.py  asset.py  indicator.py  price_data.py  sector.py
backend/app/schemas/: __init__.py  asset.py  indicator.py  price.py
backend/app/services/: backfill.py  indicator_scheduler.py  price_scheduler.py  scheduler.py  sector_sync.py  yfinance_search.py
backend/data/price_data/: prices.db.backup_20260212_145627  prices.db.backup_before_fix  prices.db.backup_date_format_fix
backend/tests/: backfill_fear_greed.py  test_api.py  test_backfill.py  test_indicators.py
backend/utils/: __init__.py  config.py  performance.py  visualization.py
data_explore/: README.md  __init__.py  demo.py  list_crypto_tickers.py  list_industries.py  list_sectors.py  screen_predefined.py  screen_sector.py
docs/: ARCHITECTURE.md  ARCHITECTURE_V2.md  PRODUCT_SPEC.md  ROADMAP.md  assets-refactor-plan.md  assets-refactor-progress.md
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
(+15 files in other folders)
