[project]
name = "data-terminal"
version = "0.1.0"
description = "数据终端 - 统一数据采集与管理系统"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "yfinance>=0.2.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "httpx>=0.25.0",
    "python-dateutil>=2.8.0",
    "apscheduler>=3.10.0",
    "pysocks>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = ["E501"]
